[WEB][WHALE][DEEPLOL]/argocd/deeplol/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deeplol
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deeplol
  template:
    metadata:
      labels:
        app: deeplol
    spec:
      containers:
        - name: web
          image: ckcks12/deep-whale-web
          ports:
            - containerPort: 80
