[WEB][WHALE][DEEPLOL]/argocd/deeplol/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deeplol
spec:
  selector:
    app: deeplol
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
